trunk/Archive2/44/936def53d85a65/output
main.cpp: In function 'int main()':
main.cpp:19:18: error: 'is_trivially_copyable' is not a member of 'std'
     std::cout << std::is_trivially_copyable<A>::value << '\n';
                  ^
main.cpp:19:46: error: expected primary-expression before '>' token
     std::cout << std::is_trivially_copyable<A>::value << '\n';
                                              ^
main.cpp:19:47: error: '::value' has not been declared
     std::cout << std::is_trivially_copyable<A>::value << '\n';
                                               ^
main.cpp:20:18: error: 'is_trivially_copyable' is not a member of 'std'
     std::cout << std::is_trivially_copyable<B>::value << '\n';
                  ^
main.cpp:20:46: error: expected primary-expression before '>' token
     std::cout << std::is_trivially_copyable<B>::value << '\n';
                                              ^
main.cpp:20:47: error: '::value' has not been declared
     std::cout << std::is_trivially_copyable<B>::value << '\n';
                                               ^
main.cpp:21:18: error: 'is_trivially_copyable' is not a member of 'std'
     std::cout << std::is_trivially_copyable<C>::value << '\n';
                  ^
main.cpp:21:46: error: expected primary-expression before '>' token
     std::cout << std::is_trivially_copyable<C>::value << '\n';
                                              ^
main.cpp:21:47: error: '::value' has not been declared
     std::cout << std::is_trivially_copyable<C>::value << '\n';
                                               ^
